Changes for metrics and assembly